fixed the instruction paragraph alignment in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /* --- Nunito Font --- */
 @font-face {
   font-family: "Nunito";
@@ -351,11 +350,11 @@ h1.brand-text {
 }
 
 .salad-food {
-    --bs-badge-color: var(--color-green-700);
+  --bs-badge-color: var(--color-green-700);
   background-color: var(--color-green-100);
 }
 .pasta-food {
-    --bs-badge-color: var(--color-yellow-600);
+  --bs-badge-color: var(--color-yellow-600);
   background-color: var(--color-yellow-100);
 }
 /*Dish info */
@@ -500,7 +499,13 @@ h1.brand-text {
 .instructions-list > .list-group-item {
   --bs-list-group-bg: #fff;
   display: flex;
+  align-items: center;
 }
+
+.instructions-list > .list-group-item > p {
+  margin: 0;
+}
+
 .instructions-list > .list-group-item::before {
   content: counters(section, ".") " ";
   counter-increment: section;
@@ -617,7 +622,7 @@ h1.brand-text {
 }
 
 #tryAnotherRecipeBtn:hover {
-    background-image: linear-gradient(
+  background-image: linear-gradient(
     to right,
     var(--color-orange-600),
     var(--color-red-600)
